--- a/Lesson10/css/menu.css
+++ b/Lesson10/css/menu.css
@@ -1,13 +1,99 @@
+body{
+    background-color: white;
+}
+header{
+    background-color: gray;
+}
+.container{
+    margin: 0.5rem 1rem;
+    padding: .5rem 0;
+    width: calc(100%-2rem);
+}
+.row{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.logo{
+    width: 50px;
+}
+.logo img{
+    width: 100%;
+}
+nav .icon-nav{
+    background-color: aliceblue;
+    border: 1px solid;
+    border-color: var(--gray);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    width: 35px;
+    height: 35px;
+}
+.icon-nav span{
+    display: block;
+    width: 60%;
+    height: 2px;
+    background-color: var(--gray);
+}
+.icon-nav:hover{
+    cursor: pointer;
+    position: relative;
+    box-shadow: 0px 1px 2px 3px black;
+}
+.icon-nav:hover span:nth-child(2){
+    display: none;
+}
+.icon-nav:hover span:nth-child(1){
+    transform: rotate(45deg);
+    position: absolute;
+}
+
+.icon-nav:hover span:nth-child(3){
+    transform: rotate(-45deg);
+    position: absolute;
+}
+
+.icon-nav:hover + ul{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    position: absolute;
+    margin: 20px;
+    right: 0;
+}
+nav ul li a{
+    text-decoration: none;
+    color: rgb(227, 197, 27);
+}
+nav ul li{
+    background-color: rgb(250, 229, 186);
+    display: flex;
+    width: 50%;
+    border: 1px solid black;
+}
+
+nav ul{
+    list-style: none;
+    display: none;
+    width: 500px;
+}
+
+
+
 @media (min-width: 576px) { 
     body{
         background-color: red;
     }
-    section{
-        background-color: green;
+    header{
+        background-color: red;
     }
-    section>p{
-        color: yellow;
+    header > h1{
+        color: violet;
     }
+
 }
 
 /* // Medium devices (tablets, 768px and up) */
@@ -20,6 +106,12 @@
     }
     header > h1{
         color: violet;
+    }
+    nav .icon-nav{
+        display: none;
+    }
+    nav ul{
+        display: flex;
     }
 }
 
