--- a/Lesson11/css/index2.css
+++ b/Lesson11/css/index2.css
@@ -1,3 +1,25 @@
+h1{
+    font-size: 30px;
+    color: blue;
+}
+h3{
+    color: blue;
+    font-size: 18px;
+    line-height: 30px;
+    padding: 30px 0;
+}
+p{
+    color: antiquewhite;
+}
+section{
+    background-color: #f2f;
+    padding: 66px 0;
+}
+.row{
+    display: flex;
+    flex-wrap: wrap;
+    padding: 15px;
+}
 
 @media (min-width: 0) { 
     html,body{
@@ -136,8 +158,3 @@
         width: 10%;
     }
 }
-.row{
-    display: flex;
-    flex-wrap: wrap;
-}
-
